examples/test/testpolicy11438.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11438
  namespace: namespace487
spec:
  podSelector:
    matchLabels:
      key28: value8
      key1: value34
      key29: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value28
      podSelector:
        matchLabels:
          key19: value20
          key20: value2
